--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,9 @@ jobs:
         shell: bash
         run: echo ${{ github.actor }}
 
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Start Process
         shell: bash
         run: |
